@startuml
skinparam {
    BoundaryBackgroundColor #629EF9
    BoundaryBorderColor black
    BoundaryFontSize 12
    BoundarySize 10
    ControlBackgroundColor #b5bd68
    ControlBorderColor #718c00
    EntityBackgroundColor #F2AC4E
    EntityBorderColor black
}

package mastermind {

package models {

    class Game
    class Combination
    class SecretCombination
    class ProposedCombination
    Enum Color
    class Attempt
    class Error

}


Combination <|-- ProposedCombination
Combination <|-- SecretCombination
Attempt o-- ProposedCombination
Attempt o-- SecretCombination
Combination *-- "*" Color
Game *-- SecretCombination
Game *-- "*" Attempt : playedAttempts
Game *-- Attempt : currentAttempt


}


@enduml